styles header menu and search

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1975,19 +1975,6 @@
           ],
           "type": "less"
         },
-        "bc77a80d": {
-          "id": "bc77a80d",
-          "path": "screenshot.png",
-          "output": "screenshot.png",
-          "name": "screenshot.png",
-          "category": "IMAGE",
-          "size": 62024,
-          "type": "png",
-          "initialSize": 62024,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "62195e19": {
           "id": "62195e19",
           "path": "css/bootstrap.css",
@@ -2036,6 +2023,112 @@
           "customOutput": true,
           "imported": false,
           "parents": [],
+          "type": "sass"
+        },
+        "bc77a80d": {
+          "id": "bc77a80d",
+          "path": "screenshot.png",
+          "output": "screenshot.png",
+          "name": "screenshot.png",
+          "category": "IMAGE",
+          "size": 556325,
+          "type": "png",
+          "initialSize": 556325,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2149926b": {
+          "id": "2149926b",
+          "path": "images/del-logo.png",
+          "output": "images/del-logo.png",
+          "name": "del-logo.png",
+          "category": "IMAGE",
+          "size": 24099,
+          "type": "png",
+          "initialSize": 24099,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "61e07f44": {
+          "id": "61e07f44",
+          "path": "template-page-full.php",
+          "output": "template-page-full.php",
+          "name": "template-page-full.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "2a103293": {
+          "id": "2a103293",
+          "path": "images/header-search.png",
+          "output": "images/header-search.png",
+          "name": "header-search.png",
+          "category": "IMAGE",
+          "size": 2977,
+          "type": "png",
+          "initialSize": 2977,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0b4e428e": {
+          "id": "0b4e428e",
+          "path": "js/hide-search.js",
+          "output": "js/hide-search-dist.js",
+          "name": "hide-search.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d5989d1b": {
+          "id": "d5989d1b",
+          "path": "components/sass/_menus.scss",
+          "output": "components/css/_menus.css",
+          "name": "_menus.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "2c27cb9c"
+          ],
+          "type": "sass"
+        },
+        "aaae3c5d": {
+          "id": "aaae3c5d",
+          "path": "components/sass/_variables.scss",
+          "output": "components/css/_variables.css",
+          "name": "_variables.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "2c27cb9c"
+          ],
           "type": "sass"
         }
       },
